# BMC-Firmware

./: .gitconfig  .gitignore  Dockerfile  README.md  mkfw.sh  readme.md  setup_build.sh
.coder/: bootstrap.sh
.devcontainer/: devcontainer.json
.devcontainer/darwin/: devcontainer.json
.devcontainer/linux/: devcontainer.json
.github/workflows/: build.yml  buildroot-update.yml  cargo_test.yml
ISSUE_TEMPLATE/: bug_report.md
app/: README.md
app/bmc/: Makefile  bmc.c  bmc.h  comm_device_serial.h  comm_gpio.h  param.c  param.h  t113_gpio.h  version.h  webserver.c  webserver.h
app/bmc/inc/: goahead.h  me.h
app/bmctest/: Makefile  bmctest.c  bmctest.h  comm_device_serial.c  comm_gpio.c  webserver.c
app/bmctest/inc/: osdep.h
app/board/: rsync_rootfs.sh
app/helloworld/: Makefile  helloworld.c
app/tpi/: Makefile  tpi.c
app/tpi_common/: Cargo.toml  tpi_common.h
app/tpi_common/src/: c_interface.rs  lib.rs  power.rs
app/tpi_rs/: Cargo.toml  tpi_rs.h
app/tpi_rs/src/: c_interface.rs  lib.rs
app/tpi_rs/src/app/: bits_trait.rs  bmc_application.rs
app/tpi_rs/src/middleware/: app_persistency.rs  event_listener.rs  gpio_definitions.rs  mod.rs  pin_controller.rs  usbboot.rs
bmc4tpi/swupdate/: genSWU.sh  sw-description
br2t113pro/: Config.in  external.desc  external.mk
br2t113pro/configs/: 100ask_t113-pro_sdcard_core_defconfig  100ask_t113-pro_spinand_core_defconfig
br2t113pro/package/sun8iw20p1-spl/: Config.in  sun8iwp20p1-spl.mk
buildroot/: ..config.tmp  .config  .config.old  Makefile
buildroot/docs/manual/: manual.html  manual.text
buildroot/docs/website/: header.html
buildroot/package/: Config.in
buildroot/package/bmc/: Config.in  bmc.mk
buildroot/package/bmctest/: Config.in  bmctest.mk
buildroot/package/raspberrypi-usbboot/: 0002-main-add-intermediate-function.patch  0003-Makefile-allow-building-a-static-archive.patch  Config.in
buildroot/package/tpi/: Config.in  tpi.mk
buildroot/package/tpi_common/: Config.in  tpi_common.mk
buildroot/support/download/: cargo-post-process
buildroot/support/scripts/: pkg-stats
buildroot_patches/: 0001-buildroot-HACK-don-t-overwrite-.cargo-config.patch  0002-bump-rust-to-1.75.patch  0002-bump-rust-to-1.79.patch  0002-bump-rust-to-1.80.patch  0002-bump-rust-to-1.85.patch
scripts/: build.sh  clean.sh  configure.sh  init.sh  sync.sh
tp2bmc/: Config.in  external.desc  external.mk
tp2bmc/board/tp2bmc/: boot.scr  build-after.sh  busybox.fragment  factory_install.scr  factory_overlay_conf.diff  fel_boot_contents.txt  genimage.cfg  install.scr  kernel.config  linux_defconfig  post-build-spinand.sh  post_build.sh  post_image.sh  ram_runner.scr  sun8i-t113s-turing-pi2-locked.dts  sun8i-t113s-turing-pi2-v2.4.dts  sun8i-t113s-turing-pi2-v2.5.1.dts  sun8i-t113s-turing-pi2-v2.5.dts  sun8i-t113s-turing-pi2.dtsi  sun8i-t113s-turingmachines-tp2-bmc.dts  sun8iw20p1-t113-100ask-t113-pro.dts  sun8iw20p1-t113-turingmachines-tp2bmc.dts  sun8iw20p1.dtsi  swupdate.config  turing-pi2-install.its  turing-pi2.its  uboot.env  uboot_defconfig
tp2bmc/configs/: tp2bmc_defconfig
tp2bmc/package/bmc/: Config.in  bmc.mk
tp2bmc/package/bmc-ui/: Config.in  bmc-ui.mk
tp2bmc/package/tpi_rs/: Cargo.toml  Config.in  tpi_rs.h  tpi_rs.mk
tp2bmc/package/tpi_rs/src/: c_interface.rs
tp2bmc/package/tpi_rs/src/app/: bmc_application.rs  mod.rs
tp2bmc/package/tpi_rs/src/middleware/: app_persistency.rs  evdev_controller.rs  event_listener.rs  gpio_definitions.rs  mod.rs  pin_controller.rs  usbboot.rs
tp2bmc/swupdate/: env0.fex
(+229 files in other folders)
