[package]
name = "tpi_rs"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
once_cell = "*"
tokio = { version = "*", features = [
    "rt-multi-thread",
    "rt",
    "time",
    "macros"
] }
gpiod = { version = "*", default-features = false }
evdev = { version = "*", features = [
    "tokio"
] }
futures = "*"
anyhow = "*"
async-trait = "*"
log = "0.4.17"
rustpiboot = { git = "https://github.com/ruslashev/rustpiboot.git" }
simple_logger = { version = "4.1.0", default-features = false, features = ["colors"] }
sqlx = { version = "*", features = [
    "runtime-tokio-rustls",
    "sqlite"
] }
serde = { version = "*", features = ["derive"] }
bincode = "*"

[profile.release]
lto = "thin"
opt-level = "z"
strip = true
