[package]
name = "tpi_rs"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
once_cell = "1.*"
tokio = { version = "1.*", features = [
    "rt-multi-thread",
    "rt",
    "time",
    "macros"
] }
gpiod = { version = "0.2.*", default-features = false }
evdev = { version = "0.12.*", features = [
    "tokio"
] }
futures = "0.*"
anyhow = "1.*"
async-trait = "0.1.*"
log = "0.4.17"
rustpiboot = { git = "https://github.com/ruslashev/rustpiboot.git" }
simple_logger = { version = "4.1.0", default-features = false, features = ["colors"] }
sqlx = { version = "0.6.*", features = [
    "runtime-tokio-rustls",
    "sqlite"
] }
serde = { version = "1.0.*", features = ["derive"] }
bincode = "1.*"
system_shutdown = "4.*"

[profile.release]
lto = "thin"
opt-level = "z"
strip = true
